--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <audio id="cl-sound" src="close.mp3"></audio>
     <audio id="pl-sound" src="22.mp3"></audio>
     <script type="module">
-        import TWEEN from "https://cdn.skypack.dev/@tweenjs/tween.js";
+        import { TWEEN } from 'https://unpkg.com/three@0.139.0/examples/jsm/libs/tween.module.min.js';
         import * as THREE from "https://cdn.skypack.dev/three@0.129.0/build/three.module.js";
         import { OrbitControls } from "https://cdn.skypack.dev/three@0.129.0/examples/jsm/controls/OrbitControls.js";
         import { GLTFLoader } from "https://cdn.skypack.dev/three@0.129.0/examples/jsm/loaders/GLTFLoader.js";
