--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
     </div>
     <div id="container3D"></div>
     <button id="flipButton">БРОСИТЬ</button>
+    <button onclick="location.href='https://your-url.com'">Вернуться</button>
     <div id="resultText"></div>
     <div id="nsgocio-container">
     <img src="tg.svg" alt="Telegram Icon" id="tg-icon">
