--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         #returnButton {
             font-size: 40px;
             font-weight: bold;
-            padding: 30px 60px;
+            padding: 30px 50px; /* Уменьшение padding для выравнивания текста */
             width: 325px;
             border-radius: 25px;
             background: linear-gradient(145deg, #8a2be2 0%, #9370db 100%);
