--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </div>
     <div id="container3D"></div>
     <button id="flipButton">БРОСИТЬ</button>
-    <button id="returnButton" onclick="location.href='https://your-url.com'">Вернуться</button>
+    <button id="returnButton" onclick="location.href='https://nickyylable.github.io/lasthere/'>Вернуться</button>
 
     <div id="resultText"></div>
     <div id="nsgocio-container">
